# ds-wagtail

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .environment  .eslintrc.js  .flake8  .gitignore  .isort.cfg  .platform.app.yaml  .prettierignore  .stylelintrc  .wiz  404.html  Dockerfile  LICENSE  README.md  curl_test.json  docker-compose.yml  fabfile.py  findings.md  gunicorn.conf.py  index.html  lint-requirements.txt  manage.py  mkdocs.yml  multi-site-setup.md  package-lock.json  package.json  pyproject.toml  ruff.toml  setup.cfg  sitemap.xml  stylelint.config.mjs  webpack.config.js
.devcontainer/: devcontainer.json  docker-compose.yml
.docker/update-npm/: Dockerfile
.docker/update-poetry/: Dockerfile
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/scripts/: check_migrations.py
.github/workflows/: _docker-build.yml  _generate-calver-tag.yml  _get-version-tag.yml  _install-aws.yml  _tests.yml  branch-cleanup.yml  cd-feature.yml  cd-main.yml  cd.yml  check-migrations.yml  ci.yml  create-release-tag.yml  create-tag.yml  create_release.yml  deploy-docs.yml  docker-build.yml  docker-cd.yml  docker-ci.yml  draft-release.yml  install-aws.yml  main.yml  platformsh-cd-develop.yml  platformsh-cd-etna-rosetta.yml  platformsh-cd-image-viewer.yml  platformsh-cd-ohos.yml  platformsh-cd-test-deploy-ohos.yml  platformsh-cd.yml  platformsh-develop.yml  platformsh-main.yml  pr.yml  release.yml  remove-untagged.yml  run_codecov.yml  version-tag.yml
.platform/: gunicorn.conf.py  routes.yaml  services.yaml
app/access/: apps.py  models.py
app/alerts/: apps.py  factories.py  models.py  serializers.py
app/analytics/: mixins.py
app/api/: admin.py  apps.py  auth.py  filters.py  models.py  permissions.py  utils.py
app/articles/: apps.py  blocks.py  factories.py  models.py
app/blog/: apps.py  blocks.py  models.py
app/categories/: apps.py
app/ciim/: apps.py  blocks.py  client.py  fields.py  forms.py  serializers.py  views.py  widgets.py
app/collections/: apps.py  blocks.py  factories.py  models.py
app/cookies/: apps.py  blocks.py  factories.py  models.py
app/core/: admin_views.py  apps.py  block_usage.py  context_processors.py  decorators.py  factories.py  json_api_client.py  styling.py  utils.py  wagtail_hooks.py  widgets.py
app/education/: __init__.py  apps.py  blocks.py  serializers.py
app/emails/: urls.py  views.py
app/foi/: apps.py  blocks.py  factories.py  models.py
app/highlights/: apps.py
bash/: bashrc.sh  dev-watch.sh  run-dev.sh  run.sh
cli/: Dockerfile
config/: jinja2.py  middleware.py  urls.py  versioning.py  views.py  wsgi.py
data/: flatmenus.json  settings.json
database_dumps/: fabfile.py
dev/: Dockerfile  aws-pull-setup  local-db-dump  local-db-restore  platformsh-pull-setup  pre-pull  pull  pull-data  pull-media  run.sh
dev-helper/: Dockerfile
docs/: env-vars.md  index.md
etna/: __init__.py
lib/: util.py
platformsh-cli/: Dockerfile
sass/: etna-wagtail-admin.scss  etna-wagtail-editor.css  etna-wagtail-editor.css.map  etna-wagtail-editor.scss  etna.scss
schemas/: article-tags.schema.json  blogs-index.schema.json  blogs-top.schema.json  blogs.schema.json  catalogue-landing.schema.json  events.schema.json  foi.schema.json  global-alert.schema.json  global-notifications.schema.json  image-rendition.schema.json  image.schema.json  images.schema.json  media.schema.json  medias.schema.json  mourning-notice.schema.json  page-summary.schema.json  page.schema.json  pages.schema.json  redirect.schema.json  redirects.schema.json
search/: search_index.json
settings/: urls.py  wsgi.py
static/: .gitkeep
templates/: 404.html  500.html  503.html  base-images.html  base.html  base_page.html
(+2566 files in other folders)
