[tool.poetry]
name = "ds-wagtail"
version = "0.1.0"
description = ""
authors = ["James Biggs <james.biggs@nationalarchives.gov.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
Django = "~5.2"
django-allauth = "~65.11"
django-birdbath = "~2.0"
django-redis = "~6.0"
django-taggit = "~6.1"
pillow-heif = "~1.1"
psycopg2-binary = "~2.9"
pyquery = "~2.0"
python = "^3.12"
python-magic = "~0.4"
sentry-sdk = "~2.35"
wagtail = "~7.2"
wagtail-factories = "~4.3"
wagtail-font-awesome-svg = "~1.1"
wagtailmedia = "~0.16"
wagtail-headless-preview = "~0.8.0"
whitenoise = "~6.9"
queryish = "~0.2"
boto3 = "~1.42.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
django-extensions = "~4.1"
responses = "~0.25"
pytest-django = "~4.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
exclude = '''
/(
  | \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | __pycache__
  | _build
  | build
  | docs
  | venv
  | node_modules
  | migrations
)/
'''

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
